--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/all.css">
     <!-- endbuild -->
   </head>
   <body ng-app="myWorkspaceApp">
@@ -82,6 +82,10 @@
         <script src="books/books_controller.js"></script>
         <script src="app_modules/books_model/books_services.js"></script>
 
+
+        <script src="movie/movie.js"></script>
+        <script src="movie/movieController.js"></script>
+        <script src="app_modules/movie_model/movieService.js"></script>
         <!-- endbuild -->
 </body>
 </html>
